syntax = "proto3";

option java_package = "com.infomaximum.cluster.core.service.transport.network.grpc.struct";
option java_multiple_files = true;

message PRemoteControllerRequestArgument {
  int32 targetComponentUniqueId = 1;
  string rControllerClassName = 2;
  string methodName = 3;
  repeated bytes args = 4;
}